force-app/main/default/objects/First_Aid__c/First_Aid__c.object-meta.xml
<CustomObject>
    <label>First Aid</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>First Aid Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>First Aids</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>