force-app/main/default/objects/First_Aid__c/fields/First_Aid_Description__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>