force-app/main/default/objects/First_Aid__c/fields/Submit_To__c.field-meta.xml
<CustomField>
    <fullName>Submit_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submit To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Concerns</relationshipName>
    <type>Lookup</type>
</CustomField>