force-app/main/default/objects/First_Aid__c/listViews/First_Aids_raised_for_me.listView-meta.xml
<ListView>
    <fullName>First_Aids_raised_for_me</fullName>
    <columns>NAME</columns>
    <columns>First_Aid_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>First Aids raised for me</label>
</ListView>