force-app/main/default/objects/First_Aid__c/listViews/My_First_Aids.listView-meta.xml
<ListView>
    <fullName>My_First_Aids</fullName>
    <columns>NAME</columns>
    <columns>First_Aid_Description__c</columns>
    <columns>Response__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>My First Aids</label>
</ListView>